# eflips-impact

./: CLAUDE.md  LCA.md  README.md  TCO.md  pyproject.toml
.github/workflows/: black.yml  pypi-version-check.yml  release.yml  unittests.yml
docs/: conf.py
eflips/impact/defaults/example/: lca.json  tco.json
eflips/impact/lca/: __init__.py  calculation.py  dataclasses.py  extraction.py  open_lca_data.py  util.py
eflips/impact/lca/open_lca_data/: bus_results.json  bus_results_added_transformer.json  bus_results_orig.json  cases_bus.py  filled_bus_config_final.json  lca.py  utilslcca.py
eflips/impact/tco/: __init__.py  calculation.py  cost_items.py  data_queries.py  dataclasses.py  params.py  tco_calculator.py  tco_parameter_config.py  util.py
eflips/impact/tco/analysis/: analysis.py
eflips/impact/tco/default_params/: berlin_bvg.json  berlin_literature.json
eflips/impact/tco/results_all_mileage/: results_Depotlader.json  results_Fokus Endhaltestellen.json  results_Originalumläufe.json
eflips/impact/utils/: __init__.py  extraction.py  fleet_init.py  session.py
tests/: conftest.py  db_setup.py
tests/tests_lca/: conftest.py  test_calculation.py  test_dataclasses.py  test_extraction.py  test_open_lca_data.py  test_util.py
tests/tests_tco/: conftest.py  test_calculation.py  test_cost_items.py  test_dataclasses.py  test_params.py  test_station_ids.py  test_util.py
tests/tests_tco/data/: tco.json
tests/tests_utils/: conftest.py  test_extraction.py  test_fleet_init.py  test_session.py
