[project]
name = "eflips-impact"
version = "1.0.0"
description = "TCO and LCA analysis for eFLIPS"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Shuyao Guo",email = "shuyao.guo@tu-berlin.de"},
    {name = "Ludger Heide", email = "ludger.heide@tu-berlin.de"},
    {name = "Julian Dubiel", email = "julian.dubiel@gmx.de"},
    {name = "Anne Syré", email = "a.syre@tu-berlin.de"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "eflips-eval (>=1.9.0,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "eflips-model (>=11.1.0,<12.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-pycharm (>=0.7.0,<0.8.0)",
    "sphinx (>=6.2.1)",
    "sphinx-autoapi (>=3.0.0)"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests", "."]



[tool.poetry.group.dev.dependencies]
sphinx = ">=6.2.1,<9"
sphinx-autoapi = "^3.8.0"


[tool.poetry]
packages = [{ include = "eflips/impact" }]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
